[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/main_menu.png" type="Texture" id=2]
[ext_resource path="res://textures/title.png" type="Texture" id=3]
[ext_resource path="res://textures/main_menu_cursor.png" type="Texture" id=4]
[ext_resource path="res://fonts/pixelfont_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://sound/music/Sunstrider.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "blink"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="GDScript" id=2]
script/source = "extends AudioStreamPlayer

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="Animation" id=3]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("title:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -104, 50 ), Vector2( -104, 50 ), Vector2( 105, 50 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("game_menu:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 336, 82 ), Vector2( 336, 82 ), Vector2( 200, 82 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 2 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 105, 50 )
texture = ExtResource( 3 )

[node name="game_menu" type="Node2D" parent="."]
position = Vector2( 200, 82 )

[node name="main_menu_cursor" type="Sprite" parent="game_menu"]
visible = false
position = Vector2( -8, 8 )
texture = ExtResource( 4 )
centered = false
hframes = 2
frame = 1

[node name="cursor_anim" type="AnimationPlayer" parent="game_menu/main_menu_cursor"]
autoplay = "blink"
anims/blink = SubResource( 1 )

[node name="new_game" type="Label" parent="game_menu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 5 )
text = "Новая игра"

[node name="continue_game" type="Label" parent="game_menu"]
margin_left = 8.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "Продолжить"

[node name="authors" type="Label" parent="game_menu"]
margin_left = 8.0
margin_top = 40.0
margin_right = 56.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 5 )
text = "Авторы"

[node name="exit" type="Label" parent="game_menu"]
margin_left = 8.0
margin_top = 56.0
margin_right = 48.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "Выход"

[node name="music_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
script = SubResource( 2 )

[node name="main_animation" type="AnimationPlayer" parent="."]
autoplay = "show"
anims/show = SubResource( 3 )

[connection signal="animation_finished" from="main_animation" to="." method="_on_main_animation_finished"]
